[tool.poetry]
name = "n-beats"
version = "0.1.0"
description = "Realization of _put_link_"
authors = ["Dzmitry Bartłomiejuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
torch = "^2.1.1"
loguru = "^0.7.2"
tqdm = "^4.66.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
torchmetrics = "^1.3.0.post0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
